# mysite

./: .gitignore  README.md  pyproject.toml  wsgi_pythonanywhere.py
main/: test_views.py
main/templates/main/: landing.html
mysite/: env_config.py  settings.py  urls.py
plus/: apps.py  urls.py  views.py
plus/templates/plus/: home.html
